# VTFLib

./: CMakeLists.txt
VTFCmd/: CMakeLists.txt  VTFCmd.rc  stdafx.h
VTFLib/: CMakeLists.txt  VTFFile.cpp  VTFFile.h  VTFLib.rc
